--- a/machine-vision-system.html
+++ b/machine-vision-system.html
@@ -62,11 +62,11 @@
                         <!--<li><a href="services.htm" title="">Services</a></li>-->
                         <li><a href="" title=""><span>Products and Services</span></a>
                             <ul> <!-- Submenu -->
-                                <li><a href="gallery.htm" title="">Tea Factory Management Systems</a></li>
-                                <li><a href="tea-factory-system.htm" title="">Advanced Machine Vision Systems</a></li>
-                                <li><a href="blog-detail.htm" title="">Point of Sales Systems</a></li>
-                                <li><a href="contact.htm" title="">Human Resources Management Systems</a></li>
-                                <li><a href="contact.htm" title="">Ninelights Mobile Applications</a></li>
+                                <li><a href="tea-factory-system.htm" title="">Tea Factory Management Systems</a></li>
+                                <li><a href="machine-vision-system.html" title="">Advanced Machine Vision Systems</a></li>
+                                <li><a href="pos-system.html" title="">Point of Sales Systems</a></li>
+                                <li><a href="pos-system.html" title="">Human Resources Management Systems</a></li>
+                                <li><a href="pos-system.html" title="">Ninelights Mobile Applications</a></li>
                             </ul>
                             <!-- End Submenu -->
                         </li>
