--- a/tea-factory-system.htm
+++ b/tea-factory-system.htm
@@ -41,40 +41,28 @@
 <!-- Header -->
 <header id="header">
     <div class="container">
-        <div class="row t-container">
-
-            <!-- Logo -->
-            <div class="span3" id="span3">
-                <div class="logo">
-                    <a href="index.htm"><img src="img/logo-header.png" id="logo" alt=""></a>
-                </div>
-            </div>
-
-            <div class="span9" id="span9">
-                <div class="row space70"></div>
-                <nav id="nav" role="navigation" class="navbar-fixed-top">
-                    <a href="#nav" title="Show navigation">Show navigation</a>
-                    <a href="#" title="Hide navigation">Hide navigation</a>
-                    <ul class="clearfix">
-                        <li class="active"><a href="index.htm" title="">Home</a></li>
-                        <li><a href="about-us.htm" title="">About Us</a></li>
-                        <li><a href="blog.htm" title="">Blog</a></li>
-                        <li><a href="contact.htm" title=""> Contact Us </a>
-                        <li><a href="" title=""> <span>Products and Services</span> </a>
-                            <ul> <!-- Submenu -->
-                                <li><a href="tea-factory-system.htm" title="">Tea Factory Management Systems</a></li>
-                                <li><a href="machine-vision-system.html" title="">Advanced Machine Vision Systems</a>
-                                </li>
-                                <li><a href="pos-system.html" title="">Point of Sales Systems</a></li>
-                                <li><a href="pos-system.html" title="">Human Resources Management Systems</a></li>
-                                <li><a href="pos-system.html" title="">Ninelights Mobile Applications</a></li>
-                            </ul>
-                            <!-- End Submenu -->
+         <nav id="nav" role="navigation" class="navbar navbar-default navbar-fixed-top">
+            <a href="#nav" title="Show navigation">Show navigation</a>
+            <a href="#" title="Hide navigation">Hide navigation</a>
+            <ul class="clearfix">
+                <li><img id="logo" src="img/logo-header.png" alt=""></li>
+                <li class="active"><a href="index.htm" title="">Home</a></li>
+                <li><a href="about-us.htm" title="">About Us</a></li>
+                <li><a href="blog.htm" title="">Blog</a></li>
+                <li><a href="contact.htm" title=""> Contact Us </a>
+                <li><a href="" title=""> <span>Products and Services</span> </a>
+                    <ul> <!-- Submenu -->
+                        <li><a href="tea-factory-system.htm" title="">Tea Factory Management Systems</a></li>
+                        <li><a href="machine-vision-system.html" title="">Advanced Machine Vision Systems</a>
                         </li>
+                        <li><a href="pos-system.html" title="">Point of Sales Systems</a></li>
+                        <li><a href="pos-system.html" title="">Human Resources Management Systems</a></li>
+                        <li><a href="pos-system.html" title="">Ninelights Mobile Applications</a></li>
                     </ul>
-                </nav>
-            </div>
-        </div>
+                    <!-- End Submenu -->
+                </li>
+            </ul>
+        </nav>
         <div class="row space40"></div>
     </div>
 </header><!-- Header End -->
@@ -108,21 +96,13 @@
     <div class="container">
         <div class="row">
             <div class="span12">
-                <h3>&nbsp;</h3>
+                &nbsp;
             </div>
 
-            <div class="span9">
+            <div class="span8">
 
                 <!-- Blog Item -->
                 <div class="row">
-                    <div class="span1">
-
-                        <div class="blog-icon">
-                            <i class="icon-camera"></i><br>
-                            <h5></h5>
-                        </div>
-
-                    </div>
                     <div class="span8">
                         <a href="blog-detail.htm"><img src="img/slider/2.jpg" alt=""></a>
 
@@ -210,7 +190,7 @@
 
                 <!-- Paging -->
                 <div class="row">
-                    <div class="span9">
+                    <div class="span8">
                         <a href="#" class="paging">&#62;</a>
                         <a href="#" class="paging">84</a>
                         <a href="#" class="paging">83</a>
